...
        app:civ_border_color="#e6e7e7e7"
        app:civ_border_width="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_article_detail_title" />

    <TextView
        android:id="@+id/textView_article_detail_author_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/grey_72"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/circleImageView_article_detail_author_image"
        app:layout_constraintStart_toEndOf="@+id/circleImageView_article_detail_author_image"
        app:layout_constraintTop_toTopOf="@+id/circleImageView_article_detail_author_image"
        tools:text="Roger Tsai"/>

    <TextView
        android:id="@+id/textView_article_detail_posted_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
...
